# simple_blog_api

./: README.md  pyproject.toml  requirements.txt
apps/blog/: admin.py  models.py
apps/blog/migrations/: 0001_initial.py  0002_auto_20210325_1815.py
apps/blog_api/: serializers.py  urls.py  views.py
config/: settings.py  urls.py
templates/blog/: index.html
