[tool.poetry]
name = "project_name"
version = "0.1.0"
description = "Django project template"
authors = ["Louis Agyapong <agyapong.louis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
django-environ = "^0.4.5"
django-debug-toolbar = "^3.2"
isort = "^5.7.0"
djangorestframework = "^3.12.2"
flake8 = "^3.9.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
django-extensions = "^3.1.0"
black = "^20.8b1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
